refactor Scheduler v2